--- a/index.html
+++ b/index.html
@@ -305,27 +305,6 @@
                         </div>
                     </div>
 
-
-                    <div class="skill mb-4">
-                        <div class="d-flex justify-content-between">
-                            <h6 class="font-weight-bold text-white">C</h6>
-                            <h6 class="font-weight-bold text-white">90%</h6>
-                        </div>
-                        <div class="progress">
-                            <div class="progress-bar bg-success" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                    </div>
-
-                    <div class="skill mb-4">
-                        <div class="d-flex justify-content-between">
-                            <h6 class="font-weight-bold text-white">C++</h6>
-                            <h6 class="font-weight-bold text-white">88%</h6>
-                        </div>
-                        <div class="progress">
-                            <div class="progress-bar  bg-success" role="progressbar" aria-valuenow="88" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                    </div>
-
                     <div class="skill mb-4">
                         <div class="d-flex justify-content-between">
                             <h6 class="font-weight-bold text-white">shell scripting & linux administration</h6>
@@ -354,7 +333,7 @@
                 <div class="col-md-6">
                     <div class="skill mb-4">
                         <div class="d-flex justify-content-between">
-                            <h6 class="font-weight-bold text-white">Angular & Ts</h6>
+                            <h6 class="font-weight-bold text-white">React</h6>
                             <h6 class="font-weight-bold text-white">80%</h6>
                         </div>
                         <div class="progress">
@@ -372,22 +351,6 @@
                             <div class="progress-bar  bg-success" role="progressbar" aria-valuenow="79" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </div>
-
-
-
-
-                    <div class="skill mb-4">
-                        <div class="d-flex justify-content-between">
-                            <h6 class="font-weight-bold text-white">X86 assembly</h6>
-                            <h6 class="font-weight-bold text-white-50">75%</h6>
-                        </div>
-                        <div class="progress">
-                            <div class="progress-bar  bg-success" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                    </div>
-                
-
-
 
                     <div class="skill mb-4">
                         <div class="d-flex justify-content-between">
