--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
                             <h6 class="font-weight-bold text-white-50">73%</h6>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="73" aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="progress-bar bg-success" role="progressbar" aria-valuenow="73" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </div>
 
@@ -366,7 +366,7 @@
                             <h6 class="font-weight-bold text-white-50">70%</h6>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="progress-bar bg-success" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </div>
 
@@ -376,7 +376,7 @@
                             <h6 class="font-weight-bold text-white-50">65%</h6>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="progress-bar bg-success" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </div>
 
