--- a/index.html
+++ b/index.html
@@ -806,7 +806,7 @@ function closePopup(popup) {
 
                 <div class="col-lg-4 mb-5">
                     <div class="position-relative mb-4">
-                        <img class="img-fluid rounded w-100" src="img/ppninja.png" alt="">
+                        <img class="img-fluid rounded w-100" src="img/CharMenu.png" alt="">
                         
                     </div>
 
