further seasoning added to the omlet

--- a/index.html
+++ b/index.html
@@ -164,12 +164,29 @@
                 <div class="col-lg-6">
                     <h3 class="mb-4 text-white ">My Expericence</h3>
                     <div class="border-left border-primary pt-2 pl-4 ml-2">
-
+                        <div class="position-relative mb-4">
+                            <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
+                            <h5 class="font-weight-bold mb-1 text-white">Permanent Position</h5>
+                            <p class="mb-2 text-white"><strong>Infor</strong> | <small>2024/05/01 - present</small></p>
+                            <p class="text-white-50">
+                                <b class="text-white">Cloud Systems Engineer:</b> As a Cloud Systems Engineer at Infor, I have been responsible for designing, implementing, and optimizing cloud-based infrastructure and automation solutions. My expertise spans cloud platforms such as AWS and Azure, where I architect scalable, high-performance systems to ensure reliability, security, and efficiency.
+                            
+                                I have worked extensively with infrastructure as code (IaC) using Terraform and CloudFormation, enabling automated provisioning and management of cloud resources. Additionally, I have implemented CI/CD pipelines with Jenkins and Gitlab pipelines to streamline deployments and improve system reliability. My experience in monitoring and observability tools like Prometheus and Grafana has helped ensure proactive system health management and troubleshooting.
+                            
+                                During my work, I accomplished the following tasks:
+                                <ul class="text-white-50">
+                                    <li>Designed and deployed scalable cloud architectures using AWS/Azure.</li>
+                                    <li>Implemented automation with Terraform and CloudFormation for infrastructure management.</li>
+                                    <li>Optimized CI/CD pipelines with Jenkins and GitHub Actions for seamless deployments.</li>
+                                    <li>Enhanced system monitoring with Prometheus, Grafana, and logging solutions.</li>
+                                </ul>
+                            </p>
+                        </div>
 
                         <div class="position-relative mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
                             <h5 class="font-weight-bold mb-1 text-white">Permanent Position</h5>
-                            <p class="mb-2 text-white"><strong>Infor</strong> | <small>2023/08/01 - present</small></p>
+                            <p class="mb-2 text-white"><strong>Infor</strong> | <small>2023/08/01 - 2024/04/31</small></p>
                             <p class="text-white-50"><b  class="text-white">Full stack engineer:</b> In my role at Infor as a Full Stack Engineer, I have demonstrated expertise in designing, developing, and optimizing web applications by leveraging modern technologies across both frontend and backend development. My work involves creating scalable and efficient solutions using JavaScript, React, .NET, and SQL, ensuring seamless user experiences and robust system performance.
 
                                 I have contributed to the development lifecycle by implementing RESTful APIs, enhancing database structures, and integrating CI/CD pipelines with Jenkins to streamline deployments. Additionally, my experience with cloud platforms and automation has allowed me to build resilient, high-performing applications that meet business needs. My proficiency in full-stack development has enabled me to troubleshoot complex issues, optimize application performance, and deliver high-quality software solutions.
