--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                         <div class="col-sm-6 py-2"><h6 class="text-white">Name: <span class="text-white-50">Mahdi Ben Mansour</span></h6></div>
                         <div class="col-sm-6 py-2"><h6 class="text-white">Birthday: <span class="text-white-50">24th May 1999</span></h6></div>
                         <div class="col-sm-6 py-2"><h6 class="text-white">Degree: <span class="text-white-50">Engineering</span></h6></div>
-                        <div class="col-sm-6 py-2"><h6 class="text-white">Experience: <span class="text-white-50">beginner</span></h6></div>
+                        <div class="col-sm-6 py-2"><h6 class="text-white">Experience: <span class="text-white-50">Mid Level</span></h6></div>
                         <div class="col-sm-6 py-2"><h6 class="text-white">Phone: <span class="text-white-50">+216 90 684 710</span></h6></div>
                         <div class="col-sm-6 py-2"><h6 class="text-white">Email: <span class="text-white-50">mahdi.benmansour@enicar.ucar.tn</span></h6></div>
                         <div class="col-sm-6 py-2"><h6 class="text-white">Address: <span class="text-white-50">Ben Arous, Tunis,Tunisia</span></h6></div>
