--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                             <h5 class="font-weight-bold mb-1 text-white">Computer Science engineering degreee</h5>
                             <p class="mb-2 text-white"><strong>National school of engineering Carthage</strong> | <small>2020 - 2023</small></p>
                             <p class="text-white-50">A diverse study plan in which i made good use of my previously acquired knowledge growing and honing it .
-                                During my studies in this establishment I got to indulge in the practical wormd where the experienced reins supreme. 
+                                During my studies in this establishment I got to indulge in the practical world where the experienced reins supreme. 
                                 I learned not only how to program  but also how to model any problem using fundamental logic and a wide tool set of programming languages 
                             </p>
                         </div>
